progress. explained how to use ecocyc and working on stoicheometry matrix.

--- a/Escherichia Coli Metabolic Model.ipynb
+++ b/Escherichia Coli Metabolic Model.ipynb
@@ -28,63 +28,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## An example to give you a feel for the technique\n",
     "\n",
-    "One pathway in ecoli metabolism is the creation of the amino acid threonine.\n"
+    "## Getting started - Run the following cells!\n",
+    "\n",
+    "The following code allows us to connect to a online database of metabolic information and build a stoicheometry matrix. Don't worry about how it works for the moment and just press run\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 205,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## References\n",
-    "\n",
-    "\n",
-    "1. W. Covert. Fundamentals of Systems Biology: From Synthetic Circuits to Whole-cell Models Markus. CRC Press. 2015.\n",
-    "2. Keseler et al. (2017), \"EcoCyc: reflecting new knowledge about Escherichia coli K-12\", Nucleic Acids Research 45:D543-50."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'enzyme_common_name': 'threonine synthase',\n",
-      " 'enzyme_ec_number': 'EC-4.2.3.1',\n",
-      " 'enzyme_synonym': 'O-phospho-L-homoserine phospho-lyase',\n",
-      " 'products': [{'coefficient': 1,\n",
-      "               'common_name': 'phosphate',\n",
-      "               'synonym': 'inorganic phosphate'},\n",
-      "              {'coefficient': 1, 'common_name': 'L-threonine', 'synonym': 'T'}],\n",
-      " 'reactants': [{'coefficient': 1,\n",
-      "                'common_name': 'O-phospho-L-homoserine',\n",
-      "                'synonym': 'o-phosphohomoserine'},\n",
-      "               {'coefficient': 1,\n",
-      "                'common_name': 'H<sub>2</sub>O',\n",
-      "                'synonym': 'H2O'}]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "from xml.etree.ElementTree import fromstring\n",
+    "## Run this cell so you are able to get reaction data from EcoCyc online database!\n",
     "\n",
     "class BioCycAPI(object):\n",
     "    def __init__(self):\n",
@@ -150,16 +106,305 @@
     "        \n",
     "        return rxn_details\n",
     "\n",
-    "api = BioCycAPI()\n",
-    "x = api.get_reaction('ECOLI:THRESYN-RXN')\n",
+    "api = BioCycAPI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## NOW Run this cell so you can build Stoichiometry Matrices\n",
+    "\n",
+    "\n",
+    "import requests\n",
+    "from xml.etree.ElementTree import fromstring\n",
+    "from collections import OrderedDict\n",
+    "import itertools\n",
+    "import numpy as np\n",
+    "\n",
+    "class StoichiometryStore(object):\n",
+    "    def __init__(self, biocyc_api):\n",
+    "        self.biocyc_api = biocyc_api\n",
+    "        \n",
+    "        self.reactions = OrderedDict()\n",
+    "        \n",
+    "    def add_reaction(self, name):\n",
+    "        if name in self.reactions:\n",
+    "            return\n",
+    "        \n",
+    "        self.reactions[name] = self.biocyc_api.get_reaction(name)\n",
+    "        \n",
+    "    def get_metabolites(self):\n",
+    "        metabolites = OrderedDict()\n",
+    "        for reaction in self.reactions.values():\n",
+    "            for participant in itertools.chain.from_iterable([\n",
+    "                reaction['products'], reaction['reactants']\n",
+    "            ]):\n",
+    "                \n",
+    "                metabolites[participant['common_name']] = {\n",
+    "                    'synonym': participant['synonym']\n",
+    "                }\n",
+    "                \n",
+    "        \n",
+    "        return metabolites\n",
+    "    \n",
+    "    def get_metabolite_vector(self):\n",
+    "        return list(self.get_metabolites().keys())\n",
+    "    \n",
+    "    def get_metabolite_positions(self):\n",
+    "        metabolite_list = self.get_metabolite_vector()\n",
+    "        return {\n",
+    "            metabolite_list[pos]: pos for pos in range(len(metabolite_list))\n",
+    "        }\n",
+    "    \n",
+    "    def get_reaction_vector(self):\n",
+    "        return list(self.reactions.keys())\n",
+    "    \n",
+    "    def get_stoichiometry_matrix(self):\n",
+    "        metabolite_positions = self.get_metabolite_positions()\n",
+    "        num_metabolites = len(metabolite_positions)\n",
+    "        num_reactions = len(self.reactions)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        s = np.zeros((num_metabolites, num_reactions))\n",
+    "        cur_rxn_idx = 0\n",
+    "        for reaction_name, reaction_details in self.reactions.items():\n",
+    "            for reactant_details in reaction_details['reactants']:\n",
+    "                # reactants should have negative coefficient\n",
+    "                coefficient = reactant_details['coefficient'] * -1\n",
+    "                s[metabolite_positions[reactant_details['common_name']], cur_rxn_idx] = coefficient\n",
+    "\n",
+    "            for product_details in reaction_details['products']:\n",
+    "                # products should have positive coefficient\n",
+    "                coefficient = product_details['coefficient']\n",
+    "                s[metabolite_positions[product_details['common_name']], cur_rxn_idx] = coefficient\n",
+    "\n",
+    "            \n",
+    "            cur_rxn_idx += 1\n",
+    "        \n",
+    "        return s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## An example to give you a feel for the technique\n",
+    "\n",
+    "One pathway in ecoli metabolism is the creation of the amino acid threonine.\n",
+    "\n",
+    "### online databases\n",
+    "\n",
+    "There is so much data in molecular biology these days that researchers have created online databases to keep track of it. These databases contain the results of thousands of individual researchers efforts and their publications.\n",
+    "\n",
+    "EcoCyc was created by researchers at SRI and stores metabolic pathways for Ecoli. It's available online at https://ecocyc.org/. Heres how the authors describe it:\n",
+    "\n",
+    "    EcoCyc is a scientific database for the bacterium Escherichia coli K-12 MG1655. The EcoCyc project performs literature-based curation of the entire genome, and of transcriptional regulation, transporters, and metabolic pathways. \n",
+    "    \n",
+    "    You can learn more by reading this paper: Keseler et al. (2017), \"EcoCyc: reflecting new knowledge about Escherichia coli K-12\", Nucleic Acids Research 45:D543-50.\n",
+    "    \n",
+    "    \n",
+    "EcoCyc has thousands of reactions and pathways for ecoli and you get visualize them on the web. Here is a link to the threonine synthesis pathway: https://ecocyc.org/ECOLI/NEW-IMAGE?type=NIL&object=THRESYN-PWY&redirect=T\n",
+    "\n",
+    "\n",
+    "![Threonine Biosynthesis Pathway](https://ecocyc.org/tmp/ptools-images/ECOLI/THRESYN-PWY_PWY-DIAGRAM_redirect=T.gif)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this project we are interested in getting this data in a programatic way. Ecocyc can be accesssed by an \"API\". I've written some python code that lets us get information about each reaction of this pathway. For example, below we retrieve details about threonine synthase. The format is a bit hard to read, but easy to interact with using python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'enzyme_ec_number': 'EC-4.2.3.1',\n",
+       " 'enzyme_common_name': 'threonine synthase',\n",
+       " 'enzyme_synonym': 'O-phospho-L-homoserine phospho-lyase',\n",
+       " 'reactants': [{'common_name': 'O-phospho-L-homoserine',\n",
+       "   'synonym': 'o-phosphohomoserine',\n",
+       "   'coefficient': 1},\n",
+       "  {'common_name': 'H<sub>2</sub>O', 'synonym': 'H2O', 'coefficient': 1}],\n",
+       " 'products': [{'common_name': 'phosphate',\n",
+       "   'synonym': 'inorganic phosphate',\n",
+       "   'coefficient': 1},\n",
+       "  {'common_name': 'L-threonine', 'synonym': 'T', 'coefficient': 1}]}"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Retrieve information about the threonine synthase reaction\n",
+    "api.get_reaction('ECOLI:THRESYN-RXN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "stoich = StoichiometryStore(api)\n",
+    "stoich.add_reaction('ECOLI:THRESYN-RXN')\n",
+    "\n",
+    "metabolites = stoich.get_metabolites()\n",
+    "print(stoich.get_metabolite_vector())\n",
+    "print(stoich.get_reaction_vector())\n",
+    "print(stoich.get_metabolite_positions())\n",
+    "print(stoich.get_stoichiometry_matrix())\n",
+    "\n",
     "import pprint\n",
-    "pprint.pprint(x)\n",
+    "pprint.pprint(metabolites)\n",
+    "#api.get_compound('ECOLI:O-PHOSPHO-L-HOMOSERINE')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## References\n",
+    "\n",
+    "\n",
+    "1. W. Covert. Fundamentals of Systems Biology: From Synthetic Circuits to Whole-cell Models Markus. CRC Press. 2015.\n",
+    "2. Keseler et al. (2017), \"EcoCyc: reflecting new knowledge about Escherichia coli K-12\", Nucleic Acids Research 45:D543-50."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['phosphate', 'L-threonine', 'O-phospho-L-homoserine', 'H<sub>2</sub>O']\n",
+      "['ECOLI:THRESYN-RXN']\n",
+      "{'phosphate': 0, 'L-threonine': 1, 'O-phospho-L-homoserine': 2, 'H<sub>2</sub>O': 3}\n",
+      "[[ 1.]\n",
+      " [ 1.]\n",
+      " [-1.]\n",
+      " [-1.]]\n",
+      "OrderedDict([('phosphate', {'synonym': 'inorganic phosphate'}),\n",
+      "             ('L-threonine', {'synonym': 'T'}),\n",
+      "             ('O-phospho-L-homoserine', {'synonym': 'o-phosphohomoserine'}),\n",
+      "             ('H<sub>2</sub>O', {'synonym': 'H2O'})])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from xml.etree.ElementTree import fromstring\n",
+    "from collections import OrderedDict\n",
+    "import itertools\n",
+    "import numpy as np\n",
+    "\n",
+    "class StoichiometryStore(object):\n",
+    "    def __init__(self, biocyc_api):\n",
+    "        self.biocyc_api = biocyc_api\n",
+    "        \n",
+    "        self.reactions = OrderedDict()\n",
+    "        \n",
+    "    def add_reaction(self, name):\n",
+    "        if name in self.reactions:\n",
+    "            return\n",
+    "        \n",
+    "        self.reactions[name] = self.biocyc_api.get_reaction(name)\n",
+    "        \n",
+    "    def get_metabolites(self):\n",
+    "        metabolites = OrderedDict()\n",
+    "        for reaction in self.reactions.values():\n",
+    "            for participant in itertools.chain.from_iterable([\n",
+    "                reaction['products'], reaction['reactants']\n",
+    "            ]):\n",
+    "                \n",
+    "                metabolites[participant['common_name']] = {\n",
+    "                    'synonym': participant['synonym']\n",
+    "                }\n",
+    "                \n",
+    "        \n",
+    "        return metabolites\n",
+    "    \n",
+    "    def get_metabolite_vector(self):\n",
+    "        return list(self.get_metabolites().keys())\n",
+    "    \n",
+    "    def get_metabolite_positions(self):\n",
+    "        metabolite_list = self.get_metabolite_vector()\n",
+    "        return {\n",
+    "            metabolite_list[pos]: pos for pos in range(len(metabolite_list))\n",
+    "        }\n",
+    "    \n",
+    "    def get_reaction_vector(self):\n",
+    "        return list(self.reactions.keys())\n",
+    "    \n",
+    "    def get_stoichiometry_matrix(self):\n",
+    "        metabolite_positions = self.get_metabolite_positions()\n",
+    "        num_metabolites = len(metabolite_positions)\n",
+    "        num_reactions = len(self.reactions)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        s = np.zeros((num_metabolites, num_reactions))\n",
+    "        cur_rxn_idx = 0\n",
+    "        for reaction_name, reaction_details in self.reactions.items():\n",
+    "            for reactant_details in reaction_details['reactants']:\n",
+    "                # reactants should have negative coefficient\n",
+    "                coefficient = reactant_details['coefficient'] * -1\n",
+    "                s[metabolite_positions[reactant_details['common_name']], cur_rxn_idx] = coefficient\n",
+    "\n",
+    "            for product_details in reaction_details['products']:\n",
+    "                # products should have positive coefficient\n",
+    "                coefficient = product_details['coefficient']\n",
+    "                s[metabolite_positions[product_details['common_name']], cur_rxn_idx] = coefficient\n",
+    "\n",
+    "            \n",
+    "            cur_rxn_idx += 1\n",
+    "        \n",
+    "        return s\n",
+    "            \n",
+    "\n",
+    "stoich = StoichiometryStore(api)\n",
+    "stoich.add_reaction('ECOLI:THRESYN-RXN')\n",
+    "\n",
+    "metabolites = stoich.get_metabolites()\n",
+    "print(stoich.get_metabolite_vector())\n",
+    "print(stoich.get_reaction_vector())\n",
+    "print(stoich.get_metabolite_positions())\n",
+    "print(stoich.get_stoichiometry_matrix())\n",
+    "\n",
+    "import pprint\n",
+    "pprint.pprint(metabolites)\n",
     "#api.get_compound('ECOLI:O-PHOSPHO-L-HOMOSERINE')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
